crates/aven-check/tests/fixtures/check/valid/variant-match-exhaustiveness.av
closed : @{@A, @B} = value
closedResult = closed ?>
  @A => 1
  @B => 2

open = @A
openResult = open ?>
  _ => 1
