crates/aven-check/tests/fixtures/check/invalid/closed-variant-non-exhaustive.av
source : @{@A, @B} = value
result = source ?>
  @A => 1

value = _
